[project]
name = "theme_demo"
version = "0.1.0"
description = "Every company needs a theme. This is ours."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.52.*,<2.0.0",
]

# uv sync --dev
[dependency-groups]
lint = ["pre-commit"]
dev = [{ include-group = "lint" }]
